ontopia/src/test-data/xtm2/invalid/itemid-collision.xtm
<topicMap xmlns="http://www.topicmaps.org/xtm/" version="2.0">
  <itemIdentity href="http://example.org/#crash"/>
  <topic id="topic">
    <itemIdentity href="http://example.org/#crash"/>
  </topic>
</topicMap>
